search bar cross icon overlap resolved

--- a/assets/application.css
+++ b/assets/application.css
@@ -737,6 +737,10 @@ video {
   margin-right: 0.5rem;
 }
 
+.mr-4 {
+  margin-right: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -1157,6 +1161,14 @@ video {
 
 .pr-10 {
   padding-right: 2.5rem;
+}
+
+.pr-5 {
+  padding-right: 1.25rem;
+}
+
+.pr-6 {
+  padding-right: 1.5rem;
 }
 
 .text-left {
